src/test/ui/issues/issue-27060-2.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/issue-27060-2.rs:3:5
   |
LL |     data: T,
   |     ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: the last field of a packed struct may only have a dynamically sized type if it does not need drop to be run

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
